--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,9 @@
  - Rename Rmpfr_get_decimal64, Rmpfr_set_decimal64, Rmpfr_get_float128 & Rmpfr_set_float128
        to Rmpfr_get_DECIMAL64, Rmpfr_set_DECIMAL64, Rmpfr_get_FLOAT128 & Rmpfr_set_FLOAT128
  - Provide Rmpfr_get_float128 & Rmpfr_set_float128 which pass the __float128 value as an NV
+ - Ensure that when casting an IV/NV to an mpfr_t, the mpfr_t has enough precision to
+   accurately represent the value.
+ - No longer define USE_64_BIT_INT if ivtype is 'long'
 
 3.22
  - Add some metadata to Makefile.PL.
