--- a/CHANGES
+++ b/CHANGES
@@ -4,7 +4,10 @@
  - Provide Rmpfr_get_float128 & Rmpfr_set_float128 which pass the __float128 value as an NV
  - Ensure that when casting an IV/NV to an mpfr_t, the mpfr_t has enough precision to
    accurately represent the value.
- - No longer define USE_64_BIT_INT if ivtype is 'long'
+ - No longer define USE_64_BIT_INT if ivtype is 'long'. (Thus had to tweak some test files.)
+ - Rename USE_64_BIT_INT #define to MATH_MPFR_NEED_LONG_LONG_INT
+ - Define IVSIZE_BITS (in XS file) if MATH_MPFR_NEED_LONG_LONG_INT is defined - for use in
+   initialization of mpfr_t in some of the overload functions.
 
 3.22
  - Add some metadata to Makefile.PL.
