--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,5 @@
 3.24
+ - Correction to t/native_float128.t
 
 3.23
  - Rename Rmpfr_get_decimal64, Rmpfr_set_decimal64, Rmpfr_get_float128 & Rmpfr_set_float128
