--- a/CHANGES
+++ b/CHANGES
@@ -1,7 +1,11 @@
 3.24
+ - Rename the Rgmp_randstate* functions to Rmpfr_randstate*, and move them into
+   their own (Math::MPFR::Random) module.
+ - Standardise numeric treatment of strings that contain non-numeric characters.
+   Add Math::MPFR::NNW and Math::MPFR::nnumflag() & friends.
  - Correction to t/native_float128.t
- - Use NVtoD64 to assign NV to Math::Decimal64 object in D64_LD.t - as new() is no longer
-   capable of making that assignment.
+ - Use NVtoD64 to assign NV to Math::Decimal64 object in D64_LD.t - as
+   Math::Decimal64::new() is no longer capable of making that assignment.
 
 3.23
  - Rename Rmpfr_get_decimal64, Rmpfr_set_decimal64, Rmpfr_get_float128 & Rmpfr_set_float128
