--- a/CHANGES
+++ b/CHANGES
@@ -1,6 +1,8 @@
 3.25
  - Catch the error of giving too large a "size" argument to mpfr_sum.t and add a
    check for this to t/sum.t
+ - Amend the #definition of LNGAMMA_BUG to cater for the fact that mpfr-3.1.3
+   did *not* contain a fix for the lngamma bug.
 
 3.24
  - Rename the Rgmp_randstate* functions to Rmpfr_randstate*, and move them into
