--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,7 @@
  - Re-phrase misleading message in t/use64bitint.t. (Message implied
    that absence of 'long long int' implied that ivsize was 32-bit.)
  - Add Rmpfr_print_rnd_mode - previously missed.
+ - Rewrite rounding value check as CHECK_ROUNDING_VALUE macro
 
 3.25
  - Catch the error of giving too large a "size" argument to mpfr_sum.t and add a
