--- a/CHANGES
+++ b/CHANGES
@@ -1,5 +1,8 @@
 3.29
  - Add _d_bytes XSub.
+ - Simplify demos/doubledouble.p
+ - Allow _d_bytes, _ld_bytes, and _f128_bytes to determine the base of
+   the given argument.
 
 3.28
  - Fix mistake in test 5 in t/bytes.t.
