--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,7 @@
  - Simplify demos/doubledouble.p
  - Allow _d_bytes, _ld_bytes, and _f128_bytes to determine the base of
    the given argument.
+ - Add _d_bytes_fr, _dd_bytes_fr, _ld_bytes_fr and _f128_bytes_fr
 
 3.28
  - Fix mistake in test 5 in t/bytes.t.
