--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,7 @@
  - Allow _d_bytes, _ld_bytes, and _f128_bytes to determine the base of
    the given argument.
  - Add _d_bytes_fr, _dd_bytes_fr, _ld_bytes_fr and _f128_bytes_fr
+ - Add bytes() function.
 
 3.28
  - Fix mistake in test 5 in t/bytes.t.
