--- a/CHANGES
+++ b/CHANGES
@@ -5,6 +5,7 @@
    the given argument.
  - Add _d_bytes_fr, _dd_bytes_fr, _ld_bytes_fr and _f128_bytes_fr
  - Add bytes() function.
+ - Amend typedef of __float128 alignment (Windows only)
 
 3.28
  - Fix mistake in test 5 in t/bytes.t.
