--- a/CHANGES
+++ b/CHANGES
@@ -6,6 +6,7 @@
  - Add _d_bytes_fr, _dd_bytes_fr, _ld_bytes_fr and _f128_bytes_fr
  - Add bytes() function.
  - Amend typedef of __float128 alignment (Windows only)
+ - Add Rmpfr_get_q (even though MPFR does not implement mpfr_get_q)
 
 3.28
  - Fix mistake in test 5 in t/bytes.t.
