--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.30
+ - Correction to the negative zero bug workaround in Rmpfr_fits_uintmax_p (which
+   had previously been returning false for (-0, MPFR_RNDD).
 
 3.29
  - Add _d_bytes XSub.
