--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,9 @@
 3.33
+ - Document Rmpfr_grandom as deprecated as of mpfr-3.2.0.
+ - Add the following functions which will be available when mpfr-3.2.0 (or higher) is installed:
+    Rmpfr_fmodquo, Rmpfr_fpif_export, Rmpfr_fpif_import, Rmpfr_flags_clear, Rmpfr_flags_set,
+    Rmpfr_flags_test, Rmpfr_flags_save, Rmpfr_flags_restore, Rmpfr_rint_roundeven, Rmpfr_roundeven,
+    Rmpfr_nrandom, Rmpfr_erandom, Rmpfr_fmma, Rmpfr_fmms, Rmpfr_log_ui and Rmpfr_gamma_inc
 
 3.32
  - Corrections to fixes to t/DoubleDouble2.t and t/bytes.t. (Same problem existed with
