--- a/CHANGES
+++ b/CHANGES
@@ -4,6 +4,7 @@
     Rmpfr_fmodquo, Rmpfr_fpif_export, Rmpfr_fpif_import, Rmpfr_flags_clear, Rmpfr_flags_set,
     Rmpfr_flags_test, Rmpfr_flags_save, Rmpfr_flags_restore, Rmpfr_rint_roundeven, Rmpfr_roundeven,
     Rmpfr_nrandom, Rmpfr_erandom, Rmpfr_fmma, Rmpfr_fmms, Rmpfr_log_ui and Rmpfr_gamma_inc
+ - Add support for IEEE 754 long doubles to bytes() function, and rewrite bytes() documentation.
 
 3.32
  - Corrections to fixes to t/DoubleDouble2.t and t/bytes.t. (Same problem existed with
