--- a/CHANGES
+++ b/CHANGES
@@ -10,6 +10,8 @@
  - Handle the setting of the NaN flag with mpfr_add/sub_ui/si functions for versions of mpfr (3.1.4
     and earlier only). ZThe bug should be fixed in later versions of mpfr.
  - Replace SvNV/SvUV/SvIV with SvNVX/SvUVX/SvIVX where appropriate.
+ - Add Rmpfr_buildopt_float128_p and Rmpfr_buildopt_sharedcache_p
+ - t/_1basic.t now ouptuts the values of the various (available) buildopt functions.
 
 3.32
  - Corrections to fixes to t/DoubleDouble2.t and t/bytes.t. (Same problem existed with
