--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,6 @@
 3.35
+ - In Makefile.PL define -DNV_IS_DOUBLE if appropriate (for use in math_mpfr_include.h as part of
+   fix for __float128 handling in nvtype=double DEBUGGING builds of perl).
 
 3.34
  - eval{} Rmpfr_z_sub in t/flags.t (test 23).
