--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,7 @@
    fix for __float128 handling in nvtype=double DEBUGGING builds of perl).
  - Tighten the conditions under which _win32_infnanstring() is called. (Now called only if OS is
    MS Windows && $] < 5.022.)
+ - Add Rmpfr_round_nearest_away()
 
 3.34
  - eval{} Rmpfr_z_sub in t/flags.t (test 23).
