--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
 3.36
+ - Add Rmpfr_rec_root, provided by Vincent Lefevre:
+   (See https://sympa.inria.fr/sympa/arc/mpfr/2016-12/msg00032.html)
+   Re-arranged as an XSub, and some special case handling added.
 
 3.35
  - In Makefile.PL define -DNV_IS_DOUBLE if appropriate (for use in math_mpfr_include.h as part of
