--- a/CHANGES
+++ b/CHANGES
@@ -2,6 +2,7 @@
  - Add Rmpfr_rec_root, provided by Vincent Lefevre:
    (See https://sympa.inria.fr/sympa/arc/mpfr/2016-12/msg00032.html)
    Re-arranged as an XSub, and some special case handling added.
+ - Add Rmpfr_beta (mpfr-4.0.0 and later only).
 
 3.35
  - In Makefile.PL define -DNV_IS_DOUBLE if appropriate (for use in math_mpfr_include.h as part of
@@ -19,7 +20,7 @@
 
 3.33
  - Document Rmpfr_grandom as deprecated as of mpfr-3.2.0.
- - Add the following functions which will be available when mpfr-3.2.0 (or higher) is installed:
+ - Add the following functions which will be available when mpfr-4.0.0 (or higher) is installed:
     Rmpfr_fmodquo, Rmpfr_fpif_export, Rmpfr_fpif_import, Rmpfr_flags_clear, Rmpfr_flags_set,
     Rmpfr_flags_test, Rmpfr_flags_save, Rmpfr_flags_restore, Rmpfr_rint_roundeven, Rmpfr_roundeven,
     Rmpfr_nrandom, Rmpfr_erandom, Rmpfr_fmma, Rmpfr_fmms, Rmpfr_log_ui and Rmpfr_gamma_inc
