--- a/CHANGES
+++ b/CHANGES
@@ -3,6 +3,7 @@
    (See https://sympa.inria.fr/sympa/arc/mpfr/2016-12/msg00032.html)
    Re-arranged as an XSub, and some special case handling added.
  - Add Rmpfr_beta (mpfr-4.0.0 and later only).
+ - Rename t/new_in_3.2.0.t to t/new_in_4.0.0.t
 
 3.35
  - In Makefile.PL define -DNV_IS_DOUBLE if appropriate (for use in math_mpfr_include.h as part of
