--- a/CHANGES
+++ b/CHANGES
@@ -4,7 +4,9 @@
    Re-arranged as an XSub, and some special case handling added.
  - Add Rmpfr_beta (mpfr-4.0.0 and later only).
  - Rename t/new_in_3.2.0.t to t/new_in_4.0.0.t
- - Add Rmpfr_q_div and Rmpfr_z_div (and use them in overload_div)
+ - Add Rmpfr_q_div and Rmpfr_z_div and use them in overload_div to replace the existing
+   code (that was rounding twice).
+ - Add overloading of comparisons with mpq_t and mpz_t
 
 3.35
  - In Makefile.PL define -DNV_IS_DOUBLE if appropriate (for use in math_mpfr_include.h as part of
