--- a/CHANGES
+++ b/CHANGES
@@ -1,4 +1,7 @@
 3.37
+ - Fix bug in Rmpfr_cmp_NV and add the tests (test 8 in t/nan_cmp.t) that would have
+   detected it. The bug affected only quadmath builds of perl, and only then if
+   CAN_PASS_FLOAT128 was not defined.
 
 3.36
  - Add Rmpfr_rec_root, provided by Vincent Lefevre:
