MPFR.pod - add a TODO section

--- a/MPFR.pod
+++ b/MPFR.pod
@@ -2285,6 +2285,11 @@ Math::MPFR - perl interface to the MPFR (floating point) library.
 
    #####################
 
+=head1 TODO
+
+    Look at wrapping mpfr_free_cache2, mpfr_free_pool,
+    mpfr_mp_memory_cleanup, mp_set_memory_functions
+
 =head1 BUGS
 
     You can get segfaults if you pass the wrong type of argument to the
